template engine added

--- a/Pokemon/package.json
+++ b/Pokemon/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "cross-env": "^7.0.3",
     "express": "^4.18.2"
   },
   "name": "pokemon",
@@ -8,7 +9,9 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "cross-env PORT=8080 nodemon app.js",
+    "start:prod": "cross-env PORT=80 node app.js"
   },
   "keywords": [
     "pokemon",
