--- a/Pokemon/package.json
+++ b/Pokemon/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "cross-env": "^7.0.3",
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "nodemailer": "^6.9.6"
   },
   "name": "pokemon",
   "version": "0.0.1",
